# verilog-parser

./: .codedocs  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  Makefile  README.md  azure-pipelines.yml  main.cpp  rename.py  scratchpad.md  verilog_driver.cpp  verilog_driver.hpp  verilog_parser.yy  verilog_scanner.l
.github/: issue_template.md  pull_request_template.md
cmake/: cmake_uninstall.cmake.in  config.cmake.in
docs/: CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Makefile  ast-construction.dox  ast-nodes.dox  ast-structure.dox  ast-utility.dox  ast.dox  header.html  project-organisation-structure.dox  project-organisation.dox  stylesheet.css
include/: verilog_ast_common.h  verilog_parser.h
include/verilogparser/: verilog_ast.h  verilog_ast_common.h  verilog_ast_util.h  verilog_parser.h  verilog_preprocessor.h
src/: CMakeLists.txt  Makefile  main-lex.cpp  main.c  main.cpp  old_verilog_parser.yy  verilog_ast.c  verilog_ast.h  verilog_ast_common.c  verilog_ast_common.h  verilog_ast_mem.c  verilog_ast_mem.h  verilog_ast_util.c  verilog_ast_util.h  verilog_driver.cpp  verilog_driver.hpp  verilog_parser.c  verilog_parser.h  verilog_parser.y  verilog_parser.yy  verilog_parser_wrapper.c  verilog_preprocessor.c  verilog_preprocessor.h  verilog_scanner.hpp  verilog_scanner.l  verilog_scanner.ll
tests/: .gitignore  CMakeLists.txt  attributes.v  cd-missed.v  ifdef-2.v  macros.v  mod-param-dec.v  module-instance.v  primitives2.v  reg-data-types.v  std-2.6.2.v  std-3.10.3.1.1-array-declaration.v  std-3.11.1-specparam.v  std-4.4.3-expressions.v  timescale.v
